调整工作流

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,139 +6,7 @@ on:
       - v*
 
 jobs:
-  build-cli-cross:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          - x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-musl
-          - x86_64-pc-windows-gnu
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: true
 
-      - name: install rust toolchain
-        uses: hecrj/setup-rust-action@v1
-        with:
-          rust-version: stable
-
-      - name: install deps
-        run: |
-          sudo apt update && sudo apt install llvm-dev libclang-dev clang libssl-dev pkg-config protobuf-compiler make -y
-
-      - name: install cross
-        run: |
-          cargo install cross
-
-      - name: build
-        run: |
-          export CFG_COMMIT_HASH=`git log --pretty=format:'%h' -n 1`
-          export CFG_COMMIT_DATE=`git log --format="%ci" -n 1`
-          cross build --release --target ${{ matrix.target }}
-
-      - name: rename and compress artifacts
-        if: ${{ matrix.target == 'x86_64-pc-windows-gnu' }}
-        run: |
-          mv target/${{ matrix.target }}/release/leaf.exe leaf-${{ matrix.target }}.exe
-
-      - name: rename and compress artifacts
-        if: ${{ matrix.target != 'x86_64-pc-windows-gnu' }}
-        run: |
-          mv target/${{ matrix.target }}/release/leaf leaf-${{ matrix.target }}
-
-      - name: upload assets
-        if: ${{ matrix.target == 'x86_64-pc-windows-gnu' }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: leaf-${{ matrix.target }}.exe
-          path: leaf-${{ matrix.target }}.exe
-
-      - name: upload assets
-        if: ${{ matrix.target != 'x86_64-pc-windows-gnu' }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: leaf-${{ matrix.target }}
-          path: leaf-${{ matrix.target }}
-
-  build-cli-macos:
-    runs-on: [macos-latest]
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - aarch64-apple-darwin
-          - x86_64-apple-darwin
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: true
-
-      - name: install rust toolchain
-        uses: hecrj/setup-rust-action@v1
-        with:
-          rust-version: nightly
-
-      - name: install llvm
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: |
-          brew install llvm protobuf
-
-      - name: install target
-        run: |
-          rustup target add ${{ matrix.target }}
-
-      - name: build
-        run: |
-          export CFG_COMMIT_HASH=`git log --pretty=format:'%h' -n 1`
-          export CFG_COMMIT_DATE=`git log --format="%ci" -n 1`
-          cargo build --release --target ${{ matrix.target }} -p leaf-cli
-
-      - name: rename and compress artifacts
-        run: |
-          mv target/${{ matrix.target }}/release/leaf leaf-${{ matrix.target }}
-
-      - name: upload assets
-        uses: actions/upload-artifact@v2
-        with:
-          name: leaf-${{ matrix.target }}
-          path: leaf-${{ matrix.target }}
-
-  build-lib-apple:
-    runs-on: macos-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: true
-
-      - name: install rust
-        uses: hecrj/setup-rust-action@v1
-        with:
-          rust-version: stable
-
-      - name: install toolchain
-        run: |
-          cargo install cbindgen
-          brew install llvm unzip protobuf
-
-      - name: build
-        run: |
-          ./scripts/build_apple_xcframework.sh
-
-      - name: zip artifacts
-        run: |
-          mv target/apple/release/leaf.xcframework .
-          zip -r leaf.xcframework.zip leaf.xcframework
-
-      - name: upload assets
-        uses: actions/upload-artifact@v2
-        with:
-          name: leaf.xcframework.zip
-          path: leaf.xcframework.zip
 
   build-lib-android:
     runs-on: ubuntu-latest
@@ -186,7 +54,7 @@ jobs:
           path: leaf-android-libs.zip
 
   create-release:
-    needs: [build-cli-cross, build-cli-macos, build-lib-apple, build-lib-android]
+    needs: [build-lib-android]
     runs-on: macos-latest
     steps:
       - name: checkout
